<package>
    <name>ipc</name>
    <version>0.1.0</version>
    <description>ADS1115 Packaged based on adafruit structure and independent hardware code</description>
    <maintainer email="awong69@jhu.edu">Aaren Wong</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>comms</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
