<package>
    <name>ipc</name>
    <version>0.1.0</version>
    <description>Data logging for channel types</description>
    <maintainer email="tannergladson@example.com">Tanner Gladson</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
