<package>
    <name>xbee_baja</name>
    <version>0.1.0</version>
    <description>Baja library for Digi XBee functions</description>
    <maintainer email="tannergladson@example.com">Tanner Gladson</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
