<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads1115</name>
  <version>0.0.0</version>
  <description>ROS2 Humble Package for the ADS1115</description>
  <maintainer email="awong69@jhu.edu">awong</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>comms</depend>
  <depend>baja_msgs</depend>
  <depend>baja_proto</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>