<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baja_proto</name>
  <version>0.1.0</version>
  <description>ROS2 Humble Package protobuf items for Baja communication</description>
  <maintainer email="tannergladson@example.com">Tanner Gladson</maintainer>
  <maintainer email="awong69@jhu.edu">Aaren Wong</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Protobuf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
